--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -3,7 +3,10 @@ html(lang="en")
 	head
 		link(href="/favicon.icon", rel="shortcut icon", type="image/x-icon")
 		title meanTest
+		link(href="app/vendor/bootstrap/dist/css/bootstrap-theme.min.css")
 
 	body
-		h1 Hello World
-		include('scripts')
+		block main-content
+
+		
+		include scripts_dev
