--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -3,10 +3,8 @@ html(lang="en")
 	head
 		link(href="/favicon.icon", rel="shortcut icon", type="image/x-icon")
 		title meanTest
-		link(href="app/vendor/bootstrap/dist/css/bootstrap-theme.min.css")
-
-	body
+		link(href="/vendor/bootstrap/dist/css/bootstrap-theme.min.css")
+	body(ng-app='app')
 		block main-content
-
 		
 		include scripts_dev
