--- a/server/includes/scripts_dev.jade
+++ b/server/includes/scripts_dev.jade
@@ -1,5 +1,6 @@
-//- script(type="text/javascript", src="/vendor/jquery/dist/jquery.min.js")
-//- script(type="text/javascript", src="/vendor/toastr/toastr.js")
-//- script(type="text/javascript", src="/vendor/angular/angular.js")
-//- script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
-//- script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
+script(type="text/javascript", src='/vendor/jquery/dist/jquery.min.js')
+script(type="text/javascript", src="/vendor/toastr/toastr.js")
+script(type="text/javascript", src="/vendor/angular/angular.js")
+script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
+script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
+script(type="text/javascript", src="/app/js/app.js")
